syntax = "proto3";

package specynetwork.specy.specy;

import "gogoproto/gogo.proto";
import "cosmos/base/v1beta1/coin.proto";
import "ibc/applications/interchain_accounts/v1/packet.proto";
import "ibc/applications/interchain_accounts/controller/v1/controller.proto";
option go_package = "github.com/specy-network/specy/x/specy/types";

// Msg defines the Msg service.
service Msg {
  rpc CreateTask      (MsgCreateTask     ) returns (MsgCreateTaskResponse     );
  rpc CancelTask      (MsgCancelTask     ) returns (MsgCancelTaskResponse     );
  rpc EditTask        (MsgEditTask       ) returns (MsgEditTaskResponse       );
  rpc CreateExecutor  (MsgCreateExecutor ) returns (MsgCreateExecutorResponse );
  rpc CancelExecutor  (MsgCancelExecutor ) returns (MsgCancelExecutorResponse );
  rpc EditExecutor    (MsgEditExecutor   ) returns (MsgEditExecutorResponse   );
  rpc DepositBalance  (MsgDepositBalance ) returns (MsgDepositBalanceResponse );
  rpc WithdrawBalance (MsgWithdrawBalance) returns (MsgWithdrawBalanceResponse);
  rpc ExecuteTask     (MsgExecuteTask    ) returns (MsgExecuteTaskResponse    );
}
message MsgCreateTask {
  string              creator      = 1;
  string              name         = 2;
  string              connectionId = 3;
  string              msg          = 4;
  string              ruleFiles    = 5;
  uint64              taskType     = 6;
  uint64              intervalType = 7;
  uint64              number       = 8;
  string              checkData    = 9;
}

message MsgCreateTaskResponse {}

message MsgCancelTask {
  string creator = 1;
  string name    = 2;
}

message MsgCancelTaskResponse {}

message MsgEditTask {
  string              creator      = 1;
  string              name         = 2;
  string              connectionId = 3;
  string              msg          = 4;
  string              ruleFiles    = 5;
  uint64              taskType     = 6;
  uint64              intervalType = 7;
  uint64              number       = 8;
}

message MsgEditTaskResponse {}

message MsgCreateExecutor {
  string creator              = 1;
  string iasAttestationReport = 2;
  string enclavePk            = 3;
}

message MsgCreateExecutorResponse {}

message MsgCancelExecutor {
  string creator = 1;
}

message MsgCancelExecutorResponse {}

message MsgEditExecutor {
  string creator              = 1;
  string iasAttestationReport = 2;
  string enclavePk            = 3;
}

message MsgEditExecutorResponse {}

message MsgDepositBalance {
  string                   creator = 1;
  cosmos.base.v1beta1.Coin amount  = 2 [(gogoproto.nullable) = false];
}

message MsgDepositBalanceResponse {}

message MsgWithdrawBalance {
  string                   creator = 1;
  cosmos.base.v1beta1.Coin amount  = 2 [(gogoproto.nullable) = false];
}

message MsgWithdrawBalanceResponse {}

message MsgExecuteTask {
  string creator     = 1;
  string owner       = 2;
  string name        = 3;
  string cproof      = 4;
  ibc.applications.interchain_accounts.v1.InterchainAccountPacketData packet_data   = 5 [(gogoproto.nullable) = false];
}

message MsgExecuteTaskResponse {}

